--- a/1440x900.css
+++ b/1440x900.css
@@ -92,6 +92,10 @@
     top: 52px;
   }
   
+  .section-about-main {
+    margin-top: 168px;
+  }
+
   .left-photos-section-about {
     position: relative;
 
@@ -383,9 +387,11 @@
     height: 1077px;
   }
   
+  .section-prices-header-container {
+    top: 120px;
+  }
+
   .section-prices-header {
-    margin-top: 120px;
-  
     height: 168px;
   
     font: var(--font-h2-100b);
@@ -396,7 +402,7 @@
   }
   
   .section-prices-lists-container {
-    margin-top: 100px;
+    margin-top: 388px;
 
     padding-left: 90px;
     padding-right: 90px;
